--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lazyscroll</title>
+    <title>LazyScroll</title>
+    <style>
+      body {
+        width: 200px;
+        padding: 0;
+        margin: 0;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
